control-agent-3.10.1/sdc-ingress-svc-deployment.yaml
apiVersion: 1
kind: List
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: authoring-datacollector
    namespace: ns1
    labels:
      app : authoring-datacollector
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: authoring-datacollector
    template:
      metadata:
        labels:
          app: authoring-datacollector
      spec:
        containers:
        - name : authoring-datacollector
          image: streamsets/datacollector:latest
          ports:
          - containerPort: 18360
- apiVersion: v1
  kind: Service
  metadata:
    name: authoring
    namespace: ns1
    labels:
      app: authoring-datacollector
  spec:
    type: NodePort
    ports:
    - name: http
      port: 18635
      targetPort: 18630
      protocol: TCP
    selector:
      app: authoring-datacollector
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: authoring-datacollector
    namespace: ns1
    annotations:
      kubernetes.io/ingress.class: traefik
  spec:
    rules:
    - host:
      http:
        paths:
        - path: /
          backend:
            serviceName: authoring
            servicePort: 18635
